This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/19/18: Added ability to continue script commands onlto multiple lines by
ending them with a backslash after a space.

7/19/18: Initialized variable to prevent camera routine from trying to do a
beam tilt in post-actions.

7/19/18: Prevented error message when it fails to close clumn valves during a
crash.

7/19/18: Added separate buttons for going to a low dose area to low dose panel
and reverted the radio buttons to just controlling show when screen down.

7/19/18" Added current camera name to camera & script tools panel.

7/10/18: Added script commands to report on next Nav item to be acquired,
change item labels and colors, make an anchor map, and strip digits from the
end of a string.

7/10/18: Fixed crash after getting an error setting up K2 saving/aligning,
fixed buffer overrun and crash with long defect file names. (In 3.6)

7/2/18: Fixed returned image not being reduced correctly when aligning K2
images with binning 3 or 6.

7/2/18: Added a small delay per frame to startup delay in K2 with dose
fractionation.  Revised camera timing output and instructions to tell people
just to use the minimum StartupDelay instead of changing the allowed minimum.

6/29/18: Improved sychronization between acquisition and post-actions to
prevent image shift from starting before end of exposure on K2.  Prevented
post-actions from starting too soon on a shot after a K2 early return, which
is critical for multiple Records.

6/29/18: Fixed multishot option to do early return only on last shot, and to
not restore image shift/beam tilt on STOP during an acquisition, but have the
camera module do it when the image is finished; also synchronized with current
dialog settings if it is open.
